sql/sql_executor.cc
@@ -934,9 +934,7 @@ do_select(JOIN *join)
 
   join->thd->limit_found_rows= join->send_records;
   /*
-    Use info provided by filesort for "order by with limit":
-
-    When using a Priority Queue, we cannot rely on send_records, but need
+    For "order by with limit", we cannot rely on send_records, but need
     to use the rowcount read originally into the join_tab applying the
     filesort. There cannot be any post-filtering conditions, nor any
     following join_tabs in this case, so this rowcount properly represents
@@ -958,8 +956,9 @@ do_select(JOIN *join)
       sort_tab= join_tab + const_tables;
     }
     if (sort_tab->filesort &&
-        sort_tab->filesort->using_pq)
+        sort_tab->filesort->limit != HA_POS_ERROR)
     {
+      DBUG_ASSERT(sort_tab->filesort->sortorder);
       join->thd->limit_found_rows= sort_tab->records;
     }
   }
